<resources>
    <string name="app_name">Calculator</string>
    <string name="text_cancel">c</string>
    <string name="text_dell">dell</string>
    <string name="text_plus_minus">+-</string>
    <string name="text_procent">%</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="text_plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="text_minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="text_multiply">*</string>
    <string name="text_point">.</string>
    <string name="_0">0</string>
    <string name="text_equals">=</string>
    <string name="text_division">/</string>
</resources>