<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="4">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_clear"
        android:text="@string/text_cancel"
        style="@style/KeyboardStyle"
        android:background="@color/button_c_dell_backgrount_color"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_dellite"
        android:text="@string/text_dell"
        style="@style/KeyboardStyle"
        android:background="@color/button_c_dell_backgrount_color"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_plus_minus"
        android:text="@string/text_plus_minus"
        style="@style/KeyboardStyle"
        android:background="@color/button_operators_backgrount_color"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_procent"
        android:text="@string/text_procent"
        style="@style/KeyboardStyle"
        android:background="@color/button_operators_backgrount_color"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_1"
        android:text="@string/_1"
        style="@style/KeyboardStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_2"
        android:text="@string/_2"
        style="@style/KeyboardStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_3"
        android:text="@string/_3"
        style="@style/KeyboardStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_plus"
        android:text="@string/text_plus"
        style="@style/KeyboardStyle"
        android:background="@color/button_operators_backgrount_color"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_4"
        android:text="@string/_4"
        style="@style/KeyboardStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_5"
        android:text="@string/_5"
        style="@style/KeyboardStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_6"
        android:text="@string/_6"
        style="@style/KeyboardStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_minus"
        android:text="@string/text_minus"
        style="@style/KeyboardStyle"
        android:background="@color/button_operators_backgrount_color"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_7"
        android:text="@string/_7"
        style="@style/KeyboardStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_8"
        android:text="@string/_8"
        style="@style/KeyboardStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_9"
        android:text="@string/_9"
        style="@style/KeyboardStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_multiply"
        android:text="@string/text_multiply"
        style="@style/KeyboardStyle"
        android:background="@color/button_operators_backgrount_color"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_point"
        android:text="@string/text_point"
        style="@style/KeyboardStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_0"
        android:text="@string/_0"
        style="@style/KeyboardStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_equals"
        android:text="@string/text_equals"
        style="@style/KeyboardStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_division"
        android:text="@string/text_division"
        style="@style/KeyboardStyle"
        android:background="@color/button_operators_backgrount_color"/>
</GridLayout>